[gd_scene load_steps=7 format=2]

[ext_resource path="res://MainMenue.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Block.tscn" type="PackedScene" id=4]
[ext_resource path="res://Networking.tscn" type="PackedScene" id=5]
[ext_resource path="res://ClientPlayer.tscn" type="PackedScene" id=6]

[node name="Main" type="Node"]
script = ExtResource( 2 )
Player = ExtResource( 3 )
Networking = ExtResource( 5 )
ClientPlayer = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1021.0
margin_bottom = 600.0
color = Color( 0.0352941, 0.12549, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenue" parent="." instance=ExtResource( 1 )]

[node name="Blocks" type="Node2D" parent="."]
visible = false
position = Vector2( 526.468, 177.962 )
scale = Vector2( 10, 1 )

[node name="Block" parent="Blocks" instance=ExtResource( 4 )]
position = Vector2( 22.1266, 170.58 )
scale = Vector2( 0.1, 10 )

[node name="Block2" parent="Blocks" instance=ExtResource( 4 )]
position = Vector2( -32.4, 398 )

[node name="Block3" parent="Blocks" instance=ExtResource( 4 )]
position = Vector2( 29.4, -157 )

[node name="Block4" parent="Blocks" instance=ExtResource( 4 )]
position = Vector2( 0, 0 )

[connection signal="host_server" from="MainMenue" to="." method="_on_MainMenue_host_server"]
[connection signal="local_match" from="MainMenue" to="." method="_on_MainMenue_local_match"]
[connection signal="quick_match" from="MainMenue" to="." method="_on_MainMenue_quick_match"]
